Implement Universal rendering p2

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,8 @@
 </head>
 
 <body>
-    <div id="app">
-        <%- myHtml -%>
-    </div>
+    <DIV id="app"><%- reactComponent -%></DIV>
+    <script>window.INITIAL_STATE=<%- initialState -%></script>
     <script src="bundle.js"></script>
 </body>
 
